mergaite-skirstymas-i-dalis

--- a/index.html
+++ b/index.html
@@ -5,8 +5,44 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mergaite</title>
+    <style>
+        main { 
+            display: inline-block;
+            width: 800px;
+            margin-left: calc((100% - 800px) / 2 );
+            }
+            header {
+                display: inline-block;
+                width: 100%;
+                margin-bottom: 40px;
+            }
+            section {
+                display: inline-block;
+                width: 100%;
+
+
+            }
+    </style>
 </head>
+
 <body>
-    CONTENT
+    <main>
+        <header>
+            <img src="" alt="logo">
+            <nav> 
+                <a href="#"> Home</a>
+                <a href="#"> Tracks</a>
+                <a href="#"> Library</a>
+                <a href="#"> Community</a>
+                <a href="#"> Sign in</a>
+            </nav>
+        </header>
+        <section>
+            <div> 
+                TEXTS
+            </div>
+            <img src="#" alt="mergaite ir liudnas veidelis">
+        </section>
+    </main>
 </body>
 </html>
