--- a/index.html
+++ b/index.html
@@ -6,21 +6,38 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mergaite</title>
     <style>
+        body {
+            background-color: #f8f8f8;
+        }
         main { 
             display: inline-block;
             width: 800px;
             margin-left: calc((100% - 800px) / 2 );
+            font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+            color: #9d9d9d;
             }
             header {
                 display: inline-block;
                 width: 100%;
+                margin-top: 10 px;
                 margin-bottom: 40px;
             }
+            a {
+                text-decoration: none;
+                font-size: 15px;
+                color: #9d9d9d;
+            }
+
             section {
                 display: inline-block;
                 width: 100%;
-
-
+                color: #9d9d9d;
+                text-align: left;
+                font-family: Courier, sans-serif;
+                margin-left: 80px;
+            }
+            div {
+                width: 45%;
             }
     </style>
 </head>
@@ -28,8 +45,8 @@
 <body>
     <main>
         <header>
-            <img src="" alt="logo">
-            <nav> 
+            <img src="mergaite-logo.png" alt="logo">
+            <nav style="float: right; margin-right: 20px; ">
                 <a href="#"> Home</a>
                 <a href="#"> Tracks</a>
                 <a href="#"> Library</a>
@@ -38,10 +55,11 @@
             </nav>
         </header>
         <section>
-            <div> 
-                TEXTS
+            <div style="float: left"> 
+             <h1  style="font-size: 100px; margin-bottom: 0px; ">404</h1>
+             <p style="font-size: 20px; margin-bottom: 0px; width: 100%;">The link is broken or the page has been moved. </p>
             </div>
-            <img src="#" alt="mergaite ir liudnas veidelis">
+            <img src="mergaite-paveikslelis.png" alt="mergaite" style="float: right; width: 49%;">
         </section>
     </main>
 </body>
