Style and parent-child selector - is paskaitos

--- a/index.html
+++ b/index.html
@@ -13,13 +13,11 @@
             display: inline-block;
             width: 800px;
             margin-left: calc((100% - 800px) / 2 );
-            font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-            color: #9d9d9d;
+
             }
             header {
                 display: inline-block;
                 width: 100%;
-                margin-top: 10 px;
                 margin-bottom: 40px;
             }
 
@@ -29,7 +27,7 @@
                 float: left;
             }
 
-            nav {
+            header>nav {
                 display: inline-block;
                 float: right;
             }
@@ -45,11 +43,8 @@
             section {
                 display: inline-block;
                 width: 100%;
-                color: #9d9d9d;
-                text-align: left;
-                font-family: Courier, sans-serif;
-                margin-left: 80px;
             }
+
             div {
                 display: inline-block;
                 float: left;
@@ -81,8 +76,8 @@
         </header>
         <section>
             <div> 
-             <h1  style="font-size: 100px; margin-bottom: 0px; ">404</h1>
-             <p style="font-size: 20px; margin-bottom: 0px; width: 100%;">The link is broken or the page has been moved. </p>
+             <h1>404</h1>
+             <p>The link is broken or the page has been moved. </p>
             </div>
             <img src="./mergaite-paveikslelis.png" alt="mergaite">
         </section>
