--- a/index.html
+++ b/index.html
@@ -13,8 +13,10 @@
             display: inline-block;
             width: 800px;
             margin-left: calc((100% - 800px) / 2 );
-
+            color: #9e9e9e;
+            font-family: 'Courier New', Courier, monospace
             }
+
             header {
                 display: inline-block;
                 width: 100%;
@@ -37,7 +39,8 @@
                 display: inline-block;
                 text-decoration: none;
                 font-size: 15px;
-                color: #9d9d9d;
+                font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+                color: #9e9e9e;
             }
 
             section {
@@ -50,13 +53,30 @@
                 float: left;
                 width: 35%;
                 margin-left: 5%;
+                margin-top: 5%;
+            }
+
+            h1 
+            {
+                display: inline-block;
+                width: 100%;
+                font-size: 80px;
+                margin: 0;
+            }
+
+            p {
+                display: inline-block;
+                width: 100%;
+                font-size: 25px;
+                margin: 0;
+
             }
 
             section>img {
                 display: inline-block;
                 float: left;
                 width: 45%;
-                margin-left:10% ;
+                margin-left:10%;
 
             }
     </style>
