--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 display: inline-block;
                 width: 100%;
                 margin-bottom: 40px;
-            }
+                            }
 
             header>img { 
                 display: inline-block;  
@@ -32,15 +32,19 @@
             header>nav {
                 display: inline-block;
                 float: right;
+                margin-top: 15px;
             }
 
 
             a {
                 display: inline-block;
+                float: left;
                 text-decoration: none;
-                font-size: 15px;
                 font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
                 color: #9e9e9e;
+                line-height: 20px;
+                font-size: 18px;
+                margin-left: 15px;
             }
 
             section {
