--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mergaite</title>
+    <link rel="shortcut icon" href="./favicon.png" type="image/png">
     <style>
         body {
             background-color: #f8f8f8;
@@ -71,7 +72,7 @@
             p {
                 display: inline-block;
                 width: 100%;
-                font-size: 25px;
+                font-size: 19px;
                 margin: 0;
 
             }
