--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
                 display: inline-block;
                 width: 100%;
                 margin-bottom: 40px;
+                background-color: royalblue;
+
                             }
 
             header>img { 
@@ -34,6 +36,8 @@
                 display: inline-block;
                 float: right;
                 margin-top: 15px;
+                background-color:red;
+
             }
 
 
@@ -46,6 +50,17 @@
                 line-height: 20px;
                 font-size: 18px;
                 margin-left: 15px;
+                            }
+
+            a:last-of-type {
+                padding: 4px;
+                padding-left: 20px;
+                padding-right: 20px;
+                margin-top: -9px;
+                text-transform: uppercase;
+                border: 5px solid;
+                border-radius: 19px;
+
             }
 
             section {
