--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
                 display: inline-block;
                 width: 100%;
                 margin-bottom: 40px;
-                background-color: royalblue;
 
                             }
 
@@ -35,8 +34,7 @@
             header>nav {
                 display: inline-block;
                 float: right;
-                margin-top: 15px;
-                background-color:red;
+                margin-top: 7px;
 
             }
 
@@ -44,22 +42,26 @@
             a {
                 display: inline-block;
                 float: left;
-                text-decoration: none;
-                font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+                padding: 4px;
+                padding-left: 5px;
+                padding-right: 5px;
                 color: #9e9e9e;
-                line-height: 20px;
+                font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
                 font-size: 18px;
-                margin-left: 15px;
-                            }
+                line-height: 20px;
+                text-decoration: none;
+                border: 5px solid transparent;
+                border-radius: 19px;
+                            
+            }
 
             a:last-of-type {
-                padding: 4px;
-                padding-left: 20px;
-                padding-right: 20px;
-                margin-top: -9px;
-                text-transform: uppercase;
-                border: 5px solid;
-                border-radius: 19px;
+            border-color:#9e9e9e;
+            padding-left: 20px;
+            padding-right: 20px;
+            margin-left: 15px;
+            text-transform: uppercase;
+
 
             }
 
