--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mergaite</title>
-    <link rel="shortcut icon" href="./favicon.png" type="image/png">
-    <link rel="stylesheet"  href="./main.css"
+    <link rel="shortcut icon" href="./img/favicon.png" type="image/png">
+    <link rel="stylesheet"  href="./css/main.css"
 </head>
 
 <body>
     <main>
         <header>
-            <img src="./mergaite-logo.png" alt="logo">
+            <img src="./img/mergaite-logo.png" alt="logo">
             <nav>
                 <a href="#"> Home</a>
                 <a href="#"> Tracks</a>
@@ -26,7 +26,7 @@
              <h1>404</h1>
              <p>The link is broken or the page has been moved. </p>
             </div>
-            <img src="./mergaite-paveikslelis.png" alt="mergaite">
+            <img src="./img/mergaite-paveikslelis.png" alt="mergaite">
         </section>
     </main>
 </body>
